# MolDB

./: .gitignore  README.md  moldb.sqlite  pyproject.toml  requirements.txt  run.py
moldb/: __init__.py  chem.py  database.py  exceptions.py  models.py  pyvenv.cfg  search.py
tests/: test_chem.py  test_database.py  test_search.py
ui/: app.py
ui/static/: app.js  index.html  style.css
