[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "moldb"
version = "0.1.0"
description = "Local-first molecule database with web UI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
moldb = "run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["moldb*", "ui*"]
